k8s/cluster/apps/flannel.yml
---
apiVersion: v1
kind: Namespace
metadata:
  name: flannel
  labels:
    pod-security.kubernetes.io/enforce: privileged
